src/components/Layouts/Layout.css
body,
html {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #f8f8f8; /* 배경 색상 설정 */
}

#root {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.container {
  height: 100vh; /* 뷰포트 높이의 100% */
  max-height: calc(100vw * (740 / 360)); /* 최대 높이를 뷰포트 너비에 따른 비율로 제한 */
  min-height: 740px; /* 최소 높이 설정 */
  width: calc(100vh * (360 / 740)); /* 뷰포트 높이에 따른 너비 계산 (비율 360:740) */
  max-width: 100vw; /* 최대 너비를 뷰포트 너비로 제한 */
  min-width: 360px; /* 최소 너비 설정 */
  background-color: white; /* 컨테이너 배경 색상 */
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
  border-radius: 10px; /* 모서리 둥글게 */
  padding: 20px; /* 내부 여백 */
  box-sizing: border-box; /* 패딩과 보더를 너비에 포함 */
  display: flex;
  flex-direction: column;
  justify-content: space-between; /* 상단, 중간, 하단을 균등하게 분배 */
  align-items: center;
  overflow: hidden; /* 내부 스크롤 방지 */
}

.header {
  width: 100%;
  flex: 0 0 auto; /* 고정 높이 */
}

.content {
  width: 100%;
  flex: 1; /* 남은 공간을 모두 차지 */
  overflow-y: auto; /* 내용이 많을 경우 스크롤 */
}

.footer {
  width: 100%;
  flex: 0 0 auto; /* 고정 높이 */
}

